fixed home screen alignment issues

--- a/src/app/components/login-success/provider-dashboard/home/home.component.css
+++ b/src/app/components/login-success/provider-dashboard/home/home.component.css
@@ -8,7 +8,7 @@ body, html {
  
 .card {
     padding: 10px;
-    min-height: 300px;
+    min-height: 350px;
     border-radius: 5px;
     box-shadow: 0px 1px 3px 5px rgba(100,100,100,0.5);
     -webkit-box-shadow: 0px 1px 5px 0px rgba(100,100,100,0.5);
